# pyt2

./: .gitignore  Makefile  README.md  cookiecutter.json  copier.yml  env.yml
.github/workflows/: autoupdate.yml  ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
template/{{ pypi_name }}/: .editorconfig  .pre-commit-config.yaml  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md  README.md.jinja  pyproject.toml.jinja  {% if add_docs %}.readthedocs.yaml{% endif %}  {% if add_docs %}poetry.lock{% endif %}  {% if not add_docs %}poetry.lock{% endif %}
template/{{ pypi_name }}/.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
template/{{ pypi_name }}/.github/workflows/: ci.yml  ci.yml.jinja  release.yml  release.yml.jinja
template/{{ pypi_name }}/tests/: test_version.py.jinja
template/{{ pypi_name }}/{% if add_docs %}docs{% endif %}/: conf.py.jinja
template/{{ pypi_name }}/{{ module_name }}/: __init__.py.jinja  {% if is_app %}__main__.py{% endif %}.jinja
{{ cookiecutter.project_slug }}/: pyproject.toml  {% if cookiecutter.add_docs == "no" %}poetry.lock{% endif %}  {% if cookiecutter.add_docs == "yes" %}poetry.lock{% endif %}
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/docs/: {% if cookiecutter.add_docs == "yes" %}requirements.txt{% endif %}
{{ cookiecutter.project_slug }}/tests/: test_version.py
{{ cookiecutter.project_slug }}/{% if cookiecutter.add_docs == "yes" %}docs{% else %}{% endif %}/: conf.py  index.rst
{{ cookiecutter.pypi_name }}/: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  {% if cookiecutter.add_docs %}poetry.lock{% endif %}  {% if cookiecutter.add_docs == "no" %}poetry.lock{% endif %}  {% if cookiecutter.add_docs == "yes" %}poetry.lock{% endif %}  {% if not cookiecutter.add_docs %}poetry.lock{% endif %}
{{ cookiecutter.pypi_name }}/.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
{{ cookiecutter.pypi_name }}/.github/workflows/: ci.yml  lints.yml  release.yml
{{ cookiecutter.pypi_name }}/.github/workflows/ISSUE_TEMPLATE/: BUG_REPORT.yml
{{ cookiecutter.pypi_name }}/docs/: {% if cookiecutter.add_docs %}conf.py{% endif %}  {% if cookiecutter.add_docs == "yes" %}conf.py{% endif %}  {% if cookiecutter.add_docs == "yes" %}requirements.txt{% endif %}
{{ cookiecutter.pypi_name }}/tests/: test_version.py
{{ cookiecutter.pypi_name }}/{{ cookiecutter.module_name }}/: __init__.py  {% if cookiecutter.is_app %}__main__.py{% endif %}
{{ pypi_name }}/: CONTRIBUTING.md  README.md  pyproject.toml.jinja
{{ pypi_name }}/.github/ISSUE_TEMPLATE/: BUG_REPORT.yml.jinja  FEATURE_REQUEST.yml.jinja
{{ pypi_name }}/{% if add_docs %}docs{ % endif %}/: index.rst.jinja  requirements.txt.jinja
{{ pypi_name }}/{{ module_name }}/: {% if is_app %}__main__.py{% endif %}.jinja
