[tool.poetry]
name = "{{ cookiecutter.pypi_name }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
version = "0.1.0"

readme = "README.md"
license = "GPL-3.0-or-later"

classifiers = [
    # Get the list of trove classifiers here: https://pypi.org/classifiers/
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
]{% if cookiecutter.add_docs %}
documentation = "https://{{ cookiecutter.module_name.replace("_", "") }}.readthedocs.io/en/latest/index.html"{% endif %}
homepage = "https://github.com/{{ cookiecutter.username }}/{{ cookiecutter.pypi_name }}"
# keywords = ["awesome", "project"]  # Maximum of 5 keywords

[tool.poetry.dependencies]
python = "^3.8"{% if cookiecutter.is_app %}

[tool.poetry.scripts]
{{ cookiecutter.module_name }} = "{{ cookiecutter.module_name }}.__main__:main"
{% endif %}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "*"
mypy = "^0"
ruff = "^0.0.245"
toml = "^0.10.2"
hypothesis = "^6.12.0"
shed = "^0.9.5"
pytest-cov = "^3.0.0"
pytest-clarity = "^1.0.1"{% if cookiecutter.add_docs %}
Sphinx = "^4.0.0"{% endif %}

[tool.poe.tasks]
# Code linting
mypy   = {cmd = "mypy {{ cookiecutter.module_name }} --strict", help = "Run MyPy on codebase"}
ruff = {cmd = "ruff check {{ cookiecutter.module_name }}", help = "Run Ruff on codebase"}
check_black = {cmd = "black {{ cookiecutter.module_name }} --check"}
check_imports = {cmd = "ruff check {{ cookiecutter.module_name }} --select I"}
style    = ["check_black", "check_imports"]
codebase = ["ruff", "mypy"]
{% if cookiecutter.add_docs %}    [tool.poe.tasks.docs]
    cmd = "sphinx-build docs build"
    help = "Build documentation"{% endif %}

    [tool.poe.tasks.format]
    cmd = "shed"
    help = "Format code"

    [tool.poe.tasks.ruff]
    cmd = "ruff {{ cookiecutter.module_name }} --fix"
    help = "Ruff autofix"

    [tool.poe.tasks.lint]
    sequence = ["style", "codebase"]
    help = "Lint codebase"

    [tool.poe.tasks.test]
    cmd = "pytest -vvv --cov={{ cookiecutter.module_name }}"
    help = "Simply run test suite"

    [tool.poe.tasks.ci]
    cmd = "pytest -vvv --cov={{ cookiecutter.module_name }} --cov-report=xml"
    help = "This workflow is for Github Actions"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 88
